refactor: remove dead Picocli CLI layer and unreachable taint-engine code
repograph-app: drop 29 CLI command classes (+ tests) that were never wired
into the Spring Boot entry point — verified via runtime check that --help
still launched the web server directly. Web/REST + MCP remain the only
supported interfaces.

repograph-taint-engine: drop 73 main-source classes (NPD analysis,
RuleFactory/RuleManager, summary XML reader, report exporters) confirmed
unreachable from the production entry point (TaintScanCli) by bytecode
dependency analysis, referenced only by manual main() shells with no
JUnit coverage. Clean build, all 32 tests, and the end-to-end taint flow
still pass after removal.

Also refreshes generated docs/screenshots and updates CONTEXT.md's
decision log to record the rationale.